# norn-protocol

./: .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  norn.toml.example  upload-all.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: Network_Architecture.md  Norn_Protocol_Specification_v2.0.md  Norn_Protocol_White_Paper.md  Upgrade_Guide.md  Upgradeability_Assessment_v0.5.0.md
examples/airdrop/: Cargo.toml
examples/amm-pool/: Cargo.toml
examples/coin/: Cargo.toml
examples/counter/: Cargo.toml
examples/crowdfund/: Cargo.toml
examples/escrow/: Cargo.toml
examples/governance/: Cargo.toml
examples/launchpad/: Cargo.toml
examples/multisig-treasury/: Cargo.toml
examples/norn-token/: Cargo.toml
examples/norn20-token/: Cargo.toml
examples/splitter/: Cargo.toml
examples/staking/: Cargo.toml
examples/swap/: Cargo.toml
examples/timelock/: Cargo.toml
examples/token-vault/: Cargo.toml
examples/vesting/: Cargo.toml
explorer/: README.md  next.config.ts  package.json
explorer/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
explorer/hooks/: use-balance.ts  use-block.ts  use-blocks.ts  use-chart-data.ts  use-fee-estimate.ts  use-health.ts  use-keyboard-shortcuts.ts  use-loom-info.ts  use-name-records.ts  use-node-info.ts  use-recent-blocks.ts  use-recent-history.ts  use-staking-info.ts  use-subscriptions.ts  use-thread-state.ts  use-token-info.ts  use-tokens-list.ts  use-transaction.ts  use-tx-history.ts  use-validator-set.ts  use-weave-state.ts
explorer/lib/: address-labels.ts  config.ts  constants.ts  csv-export.ts  format.ts  rpc.ts
explorer/providers/: query-provider.tsx  subscriptions-provider.tsx
explorer/stores/: favorites-store.ts  realtime-store.ts
explorer/types/: index.ts
genesis/: devnet.json  mainnet.json  testnet.json
norn-crypto/: Cargo.toml
norn-crypto/src/: address.rs  encryption.rs  hash.rs  hd.rs  keys.rs  lib.rs  merkle.rs  seed.rs  shamir.rs
norn-loom/: Cargo.toml
norn-loom/src/: call_stack.rs  dispute.rs  error.rs  gas.rs  host.rs  lib.rs  lifecycle.rs  runtime.rs  sdk.rs  state.rs
norn-node/: Cargo.toml
norn-node/examples/: bench_tps.rs  demo.rs
norn-node/src/: banner.rs  cli.rs  config.rs  error.rs  genesis.rs  lib.rs  main.rs  metrics.rs  node.rs  state_manager.rs  state_store.rs
norn-node/src/rpc/: auth.rs  chat_store.rs  handlers.rs  mod.rs  server.rs  types.rs
norn-node/src/tools/: explorer.rs  faucet.rs  mod.rs
norn-node/src/wallet/: cli.rs  config.rs  error.rs  format.rs  keystore.rs  mod.rs  prompt.rs  rpc_client.rs  ui.rs
norn-node/src/wallet/commands/: address.rs  balance.rs  block.rs  burn_token.rs  change_password.rs  commit.rs  config_cmd.rs  create.rs  create_token.rs  delete.rs  deploy_loom.rs  execute_loom.rs  export.rs  faucet.rs  fees.rs  history.rs  import.rs  join_loom.rs  leave_loom.rs  list.rs  list_looms.rs  list_tokens.rs  loom_info.rs  mint_token.rs  mod.rs  name_records.rs  names.rs  new_loom.rs  node_info.rs  query_loom.rs  register.rs  register_name.rs  rename.rs  resolve.rs  reverse_resolve.rs  rewards.rs  set_name_record.rs  sign_message.rs  stake.rs  staking_info.rs  (+12 more)
norn-node/tests/: e2e.rs
norn-relay/: Cargo.toml
norn-relay/src/: behaviour.rs  codec.rs  config.rs  discovery.rs  error.rs  lib.rs  peer_manager.rs  protocol.rs  relay.rs  spindle_registry.rs
norn-sdk/: Cargo.toml
norn-sdk-macros/: Cargo.toml
norn-sdk-macros/src/: contract_impl.rs  contract_struct.rs  lib.rs  util.rs
norn-sdk/src/: addr.rs  contract.rs  encoding.rs  entry.rs  error.rs  guard.rs  host.rs  lib.rs  math.rs  output.rs  prelude.rs  response.rs  storage.rs  testing.rs  types.rs
norn-sdk/src/stdlib/: mod.rs  norn20.rs  ownable.rs  pausable.rs
norn-spindle/: Cargo.toml
norn-spindle/src/: error.rs  lib.rs  monitor.rs  rate_limit.rs  service.rs
norn-storage/: Cargo.toml
norn-storage/src/: error.rs  lib.rs  memory.rs  merkle_store.rs  rocksdb.rs  sqlite.rs  thread_store.rs  traits.rs  weave_store.rs
norn-thread/: Cargo.toml
norn-thread/src/: chain.rs  knot.rs  lib.rs  state.rs  thread.rs  validation.rs
norn-types/: Cargo.toml
norn-types/src/: consensus.rs  constants.rs  error.rs  fraud.rs  genesis.rs  knot.rs  lib.rs  loom.rs  name.rs  network.rs  primitives.rs  thread.rs  token.rs  weave.rs
norn-weave/: Cargo.toml
norn-weave/src/: block.rs  commitment.rs  consensus.rs  engine.rs  error.rs  fees.rs  fraud.rs  leader.rs  lib.rs  loom.rs  mempool.rs  name.rs  registration.rs  staking.rs  token.rs
scripts/: deploy-contracts.sh  setup-node.sh
sdk/typescript/: package.json  tsconfig.json
wallet/: next.config.ts  package.json  tailwind.config.ts
wallet-extension/: README.md  manifest.json  package.json  tailwind.config.ts  vite.config.ts
wallet/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
wallet/components/: app-deploy-page.tsx  app-instance-list.tsx  feed-card.tsx  sw-register.tsx
wallet/hooks/: use-airdrop.ts  use-amm.ts  use-app-instances.ts  use-auto-lock.ts  use-balance.ts  use-chat-subscription.ts  use-created-tokens.ts  use-crowdfund.ts  use-deploy-loom.ts  use-discover-feed.ts  use-escrow.ts  use-faucet.ts  use-governance.ts  use-keyboard-shortcuts.ts  use-launchpad.ts  use-loom-ops.ts  use-loom-refresh.ts  use-looms-list.ts  use-name-records.ts  use-name-register.ts  use-name-transfer.ts  use-names.ts  use-network.ts  use-passkey-auth.ts  use-reverse-name.ts  use-send.ts  use-sign-transaction.ts  use-splitter.ts  use-staking.ts  use-standalone.ts  use-subscriptions.ts  use-swap.ts  use-timelock.ts  use-token-balances.ts  use-token-info.ts  use-token-ops.ts  use-token-symbol.ts  use-treasury.ts  use-tx-history.ts  use-vesting.ts  (+1 more)
wallet/lib/: apps-config.ts  borsh-airdrop.ts  borsh-amm.ts  borsh-crowdfund.ts  borsh-escrow.ts  borsh-governance.ts  (+23 more)
website/: mdx-components.tsx  next.config.ts  package.json  tailwind.config.ts
(+349 files in other folders)
