[workspace]
resolver = "2"
members = [
    "norn-types",
    "norn-crypto",
    "norn-thread",
    "norn-storage",
    "norn-relay",
    "norn-weave",
    "norn-loom",
    "norn-spindle",
    "norn-node",
]

[workspace.package]
version = "0.5.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/augmnt/norn-protocol"
homepage = "https://github.com/augmnt/norn-protocol"
authors = ["Augmnt <team@augmnt.dev>"]
keywords = ["blockchain", "layer1", "fraud-proofs", "off-chain", "protocol"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
