[package]
name = "norn-loom"
description = "Off-chain WebAssembly smart contract runtime for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
norn-types = { path = "../norn-types" }
norn-crypto = { path = "../norn-crypto" }
norn-storage = { path = "../norn-storage" }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = "19"

[dev-dependencies]
proptest = "1"
wat = "1"
