[package]
name = "norn-loom"
description = "Off-chain WebAssembly smart contract runtime for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
norn-types = { path = "../norn-types", version = "0.4.0" }
norn-crypto = { path = "../norn-crypto", version = "0.4.0" }
norn-storage = { path = "../norn-storage", version = "0.4.0" }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = "41"

[dev-dependencies]
proptest = "1"
wat = "1"
