[package]
name = "norn-node"
description = "Full node binary with CLI, JSON-RPC, and wallet for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["testnet"]
testnet = []

[[bin]]
name = "norn-node"
path = "src/main.rs"

[dependencies]
norn-types = { path = "../norn-types" }
norn-crypto = { path = "../norn-crypto" }
norn-thread = { path = "../norn-thread" }
norn-storage = { path = "../norn-storage" }
norn-relay = { path = "../norn-relay" }
norn-weave = { path = "../norn-weave" }
norn-loom = { path = "../norn-loom" }
norn-spindle = { path = "../norn-spindle" }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
jsonrpsee = { version = "0.24", features = ["server", "client", "macros", "http-client"] }
prometheus-client = "0.22"
hex = "0.4"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
dirs = "5"
chrono = "0.4"
bip39 = "2"
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
