[package]
name = "norn-node"
description = "Full node binary with CLI, JSON-RPC, and wallet for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["testnet"]
testnet = []

[[bin]]
name = "norn"
path = "src/main.rs"

[dependencies]
norn-types = { path = "../norn-types", version = "0.10.0" }
norn-crypto = { path = "../norn-crypto", version = "0.10.0" }
norn-thread = { path = "../norn-thread", version = "0.10.0" }
norn-storage = { path = "../norn-storage", version = "0.10.0" }
norn-relay = { path = "../norn-relay", version = "0.10.0" }
norn-weave = { path = "../norn-weave", version = "0.10.0" }
norn-loom = { path = "../norn-loom", version = "0.10.0" }
norn-spindle = { path = "../norn-spindle", version = "0.10.0" }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
jsonrpsee = { version = "0.24", features = ["server", "client", "macros", "http-client"] }
tower = "0.4"
http = "1"
hyper = "1"
http-body = "1"
http-body-util = "0.1"
prometheus-client = "0.22"
hex = "0.4"
dialoguer = "0.11"
comfy-table = "7"
console = "0.15"
indicatif = "0.17"
dirs = "5"
chrono = "0.4"
bip39 = "2"
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
