[package]
name = "norn-relay"
description = "P2P networking and message relay for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
norn-types = { path = "../norn-types", version = "0.7.0" }
norn-crypto = { path = "../norn-crypto", version = "0.7.0" }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libp2p = { version = "0.54", features = ["dns", "gossipsub", "request-response", "identify", "mdns", "noise", "tcp", "tokio", "macros", "yamux"] }
futures = "0.3"
async-trait = "0.1"
blake3 = "1"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
