[package]
name = "norn-sdk"
description = "SDK for writing Norn Protocol loom smart contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borsh = { version = "1.5", default-features = false, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dlmalloc = { version = "0.2", features = ["global"] }
