[package]
name = "norn-spindle"
description = "Watchtower service and fraud proof construction for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
norn-types = { path = "../norn-types" }
norn-crypto = { path = "../norn-crypto" }
norn-thread = { path = "../norn-thread" }
norn-storage = { path = "../norn-storage" }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1"
