[package]
name = "norn-storage"
description = "Storage abstraction with memory, SQLite, and RocksDB backends for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
norn-types = { path = "../norn-types", version = "0.18.0" }
norn-crypto = { path = "../norn-crypto", version = "0.18.0" }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }

[dev-dependencies]
