[package]
name = "norn-thread"
description = "Thread chain management and Knot validation for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
norn-types = { path = "../norn-types", version = "0.8.1" }
norn-crypto = { path = "../norn-crypto", version = "0.8.1" }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
