[package]
name = "norn-types"
description = "Shared type definitions for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1"
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
