[package]
name = "norn-weave"
version = "0.1.0"
edition = "2021"

[dependencies]
norn-types = { path = "../norn-types" }
norn-crypto = { path = "../norn-crypto" }
norn-storage = { path = "../norn-storage" }
norn-loom = { path = "../norn-loom" }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rayon = "1"

[dev-dependencies]
proptest = "1"
norn-spindle = { path = "../norn-spindle" }
