[package]
name = "norn-weave"
description = "Anchor chain engine with HotStuff BFT consensus for the Norn Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
norn-types = { path = "../norn-types", version = "0.10.0" }
norn-crypto = { path = "../norn-crypto", version = "0.10.0" }
norn-storage = { path = "../norn-storage", version = "0.10.0" }
norn-loom = { path = "../norn-loom", version = "0.10.0" }
borsh = { workspace = true }
hex = "0.4"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rayon = "1"

[dev-dependencies]
norn-spindle = { path = "../norn-spindle", version = "0.10.0" }
